Fixed Spacing

--- a/ci-base/asserts/css/style.css
+++ b/ci-base/asserts/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 #main,
 footer {
-  padding-left: 180px;
+  padding-left: 240px;
 }
 .margin {
   margin: 0;
